--- a/EDevletKapisi.html
+++ b/EDevletKapisi.html
@@ -158,26 +158,6 @@
     
 </div>
 </div>
-        <!-- <div class="card text-center">
-            <div class="card-header">
-              <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="true" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div> -->
             <div class="footer">
                 <small>2021,Ankara - Tüm Hakları Saklıdır</small>
             </div>               
@@ -185,54 +165,54 @@
 
           <script>
             function edevlet(){
-                document.querySelector('#e-devletSifresi').style.display="block";
+                document.querySelector('#edevlet').style.display="block";
                 document.querySelector('#tckimlikkarti').style.display="none";
-                document.querySelector('#buttons').style.display="";
+                document.querySelector('#button').style.display="";
                 document.querySelector('#internetbanka').style.display="none";
                 document.querySelector('#mobilimza').style.display="none";
                 document.querySelector('#eimza').style.display="none";
-                document.querySelector('#card').style.height="580px";
+                document.querySelector('#card').style.height="700px";
                 document.querySelector('#card2').style.marginTop="12%";
 
             }
             function mobilImza(){
                 document.querySelector('#mobilimza').style.display="block";
                 document.querySelector('#internetbanka').style.display="none";
-                document.querySelector('#buttons').style.display="";
+                document.querySelector('#button').style.display="";
                 document.querySelector('#tckimlikkarti').style.display="none";
                 document.querySelector('#eimza').style.display="none";
-                document.querySelector('#e-devletSifresi').style.display="none";
-                document.querySelector('#card').style.height="675px";
-                document.querySelector('#card2').style.marginTop="10%";
+                document.querySelector('#edevlet').style.display="none";
+                document.querySelector('#card').style.height="785px";
+                document.querySelector('#card2').style.marginTop="15%";
             }
             function eimza(){
                 document.querySelector('#eimza').style.display="block";
                 document.querySelector('#internetbanka').style.display="none";
-                document.querySelector('#buttons').style.display="";
+                document.querySelector('#button').style.display="";
                 document.querySelector('#mobilimza').style.display="none";
                 document.querySelector('#tckimlikkarti').style.display="none";
-                document.querySelector('#e-devletSifresi').style.display="none";
-                document.querySelector('#card').style.height="790px";
+                document.querySelector('#edevlet').style.display="none";
+                document.querySelector('#card').style.height="870px";
                 document.querySelector('#card2').style.marginTop="5%";
             }
             function kimlikKart(){
                 document.querySelector('#tckimlikkarti').style.display="block";
                 document.querySelector('#internetbanka').style.display="none";
-                document.querySelector('#buttons').style.display="";
+                document.querySelector('#button').style.display="";
                 document.querySelector('#eimza').style.display="none";
                 document.querySelector('#mobilimza').style.display="none";
-                document.querySelector('#e-devletSifresi').style.display="none";
-                document.querySelector('#card').style.height="680px";
+                document.querySelector('#edevlet').style.display="none";
+                document.querySelector('#card').style.height="770px";
                 document.querySelector('#card2').style.marginTop="10%";
             }
             function internetBanka(){
                 document.querySelector('#internetbanka').style.display="block";
-                document.querySelector('#buttons').style.display="none";
+                document.querySelector('#button').style.display="none";
                 document.querySelector('#tckimlikkarti').style.display="none";
                 document.querySelector('#eimza').style.display="none";
                 document.querySelector('#mobilimza').style.display="none";
-                document.querySelector('#e-devletSifresi').style.display="none";
-                document.querySelector('#card').style.height="690px";
+                document.querySelector('#edevlet').style.display="none";
+                document.querySelector('#card').style.height="870px";
                 document.querySelector('#card2').style.marginTop="10%";
             }
             function gizle1(){
